--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 19:05:02 2018</p>
+         Last Run: Fri Nov 16 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -32,25 +32,25 @@
                         <td>08:00 AM</td>
                         <td>Clear</td>
                         <td>-12</td>
-                        <td>-17</td>
+                        <td>-16</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SW</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>3</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -58,9 +58,9 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>6</td>
                      </tr>
@@ -70,7 +70,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -102,7 +102,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-17",
+                 "-16",
                  "-14",
                  "-10",
                  "-6"
@@ -177,7 +177,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "4",
+                 "3",
                  "2",
                  "1"
                ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "78",
-                 "68",
-                 "56"
+                 "83",
+                 "77",
+                 "66",
+                 "55"
                ]
              },
              {
@@ -200,8 +200,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
-                 "11",
+                 "14",
+                 "10",
                  "6",
                  "2"
                ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 19:05:02 2018</p>
+         Last Run: Fri Nov 16 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -270,7 +270,7 @@
                         <td>1</td>
                         <td>50</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>WNW</td>
                         <td>62</td>
                      </tr>
@@ -280,7 +280,7 @@
                         <td>8</td>
                         <td>6</td>
                         <td>2</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
@@ -291,12 +291,12 @@
                         <td>Partly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>6</td>
-                        <td>49</td>
+                        <td>5</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -396,7 +396,7 @@
                "data":[
                  "1",
                  "2",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -406,8 +406,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "50",
-                 "48",
-                 "49"
+                 "49",
+                 "50"
                ]
              },
              {
@@ -418,7 +418,7 @@
                "data":[
                  "62",
                  "58",
-                 "59"
+                 "58"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 19:05:02 2018</p>
+         Last Run: Fri Nov 16 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,34 +480,34 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>1</td>
-                        <td>63</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>29</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>1</td>
-                        <td>66</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>2</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>1</td>
-                        <td>68</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>2</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
                  "-3",
-                 "-4"
+                 "-4",
+                 "-6"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
                  "0",
-                 "-1"
+                 "-1",
+                 "-2"
                ]
              }
            ]
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
-                 "1"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "66",
-                 "68"
+                 "65",
+                 "67",
+                 "70"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 19:05:02 2018</p>
+         Last Run: Fri Nov 16 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
@@ -835,7 +835,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
+                 "59",
                  "60",
                  "61"
                ]
