--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 00:05:02 2018</p>
+         Last Run: Sat Nov 17 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -33,20 +33,20 @@
                         <td>Clear</td>
                         <td>-12</td>
                         <td>-16</td>
-                        <td>5</td>
-                        <td>83</td>
+                        <td>3</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>14</td>
+                        <td>WSW</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>3</td>
-                        <td>78</td>
+                        <td>4</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -55,10 +55,10 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-7</td>
-                        <td>-11</td>
+                        <td>-6</td>
+                        <td>-10</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -70,7 +70,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -104,7 +104,7 @@
                "data":[
                  "-16",
                  "-14",
-                 "-11",
+                 "-10",
                  "-6"
                ]
              },
@@ -117,7 +117,7 @@
                "data":[
                  "-12",
                  "-10",
-                 "-7",
+                 "-6",
                  "-3"
                ]
              }
@@ -176,8 +176,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
                  "3",
+                 "4",
                  "2",
                  "1"
                ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "78",
-                 "69",
-                 "58"
+                 "85",
+                 "79",
+                 "68",
+                 "56"
                ]
              },
              {
@@ -200,7 +200,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
+                 "15",
                  "13",
                  "6",
                  "2"
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 00:05:02 2018</p>
+         Last Run: Sat Nov 17 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,19 +272,19 @@
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>67</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
+                        <td>7</td>
+                        <td>4</td>
                         <td>9</td>
                         <td>51</td>
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,11 +292,11 @@
                         <td>8</td>
                         <td>6</td>
                         <td>9</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>68</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -324,7 +324,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "3",
-                 "6",
+                 "4",
                  "6"
                ]
              },
@@ -336,7 +336,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "6",
-                 "8",
+                 "7",
                  "8"
                ]
              }
@@ -407,7 +407,7 @@
                "data":[
                  "52",
                  "51",
-                 "51"
+                 "52"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
                  "65",
-                 "68"
+                 "64",
+                 "66"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 00:05:02 2018</p>
+         Last Run: Sat Nov 17 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,11 +483,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -495,23 +495,23 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>2</td>
-                        <td>74</td>
+                        <td>3</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -611,7 +611,7 @@
                "data":[
                  "2",
                  "2",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "71",
-                 "74"
+                 "66",
+                 "70",
+                 "72"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "9",
                  "10",
-                 "11",
-                 "11"
+                 "10"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 00:05:02 2018</p>
+         Last Run: Sat Nov 17 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -695,14 +695,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>58</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>55</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>0</td>
-                        <td>59</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SW</td>
-                        <td>54</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>0</td>
-                        <td>60</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SW</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,7 +753,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-3",
                  "-3"
                ]
@@ -765,7 +765,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "2",
                  "1",
                  "1"
                ]
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "59",
-                 "60"
+                 "55",
+                 "56",
+                 "57"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "56",
                  "55",
-                 "54",
-                 "53"
+                 "54"
                ]
              }
            ]
