--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 01:05:02 2018</p>
+         Last Run: Sat Nov 17 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>3</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -45,22 +45,22 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>79</td>
+                        <td>3</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-7</td>
+                        <td>-12</td>
                         <td>2</td>
                         <td>68</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>6</td>
                      </tr>
@@ -104,7 +104,7 @@
                "data":[
                  "-16",
                  "-14",
-                 "-10",
+                 "-12",
                  "-6"
                ]
              },
@@ -117,7 +117,7 @@
                "data":[
                  "-12",
                  "-10",
-                 "-6",
+                 "-7",
                  "-3"
                ]
              }
@@ -177,7 +177,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "4",
+                 "3",
                  "2",
                  "1"
                ]
@@ -188,8 +188,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "79",
+                 "84",
+                 "78",
                  "68",
                  "56"
                ]
@@ -201,7 +201,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "13",
+                 "14",
                  "6",
                  "2"
                ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 01:05:02 2018</p>
+         Last Run: Sat Nov 17 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>65</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -280,23 +280,23 @@
                         <td>7</td>
                         <td>4</td>
                         <td>9</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>64</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>9</td>
-                        <td>52</td>
+                        <td>Overcast</td>
+                        <td>7</td>
+                        <td>5</td>
+                        <td>10</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WNW</td>
-                        <td>66</td>
+                        <td>NW</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -325,7 +325,7 @@
                "data":[
                  "3",
                  "4",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -337,7 +337,7 @@
                "data":[
                  "6",
                  "7",
-                 "8"
+                 "7"
                ]
              }
            ]
@@ -396,7 +396,7 @@
                "data":[
                  "10",
                  "9",
-                 "9"
+                 "10"
                ]
              },
              {
@@ -406,8 +406,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "51",
-                 "52"
+                 "52",
+                 "53"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "64",
-                 "66"
+                 "70",
+                 "78",
+                 "88"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 01:05:02 2018</p>
+         Last Run: Sat Nov 17 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -487,7 +487,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -495,7 +495,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -504,10 +504,10 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>3</td>
-                        <td>72</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>2</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -540,7 +540,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-6"
+                 "-4"
                ]
              },
              {
@@ -552,7 +552,7 @@
                "data":[
                  "0",
                  "-1",
-                 "-2"
+                 "-1"
                ]
              }
            ]
@@ -611,7 +611,7 @@
                "data":[
                  "2",
                  "2",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -621,8 +621,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "66",
-                 "70",
-                 "72"
+                 "68",
+                 "70"
                ]
              },
              {
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
+                 "10",
                  "10",
                  "10"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 01:05:02 2018</p>
+         Last Run: Sat Nov 17 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>56</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
                         <td>0</td>
-                        <td>56</td>
-                        <td>0</td>
-                        <td>14</td>
-                        <td>SW</td>
                         <td>55</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>SW</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
                         <td>0</td>
                         <td>57</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SW</td>
-                        <td>54</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,8 +835,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "54",
                  "55",
-                 "56",
                  "57"
                ]
              },
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "55",
-                 "54"
+                 "60",
+                 "66",
+                 "70"
                ]
              }
            ]
